[package]
name = "uasset-index"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding" }
regex = "1.9.5"
lazy_static = "1.4.0"
